--- a/index.css
+++ b/index.css
@@ -11,20 +11,17 @@ body {
 }
 
 .Header {
-  position: absolute;
+  display: block;
   text-align: center;
   width: 375px;
   height: 70px;
-  left: 0px;
-  top: 0px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
 }
 .Header-title {
   text-align: center;
   position: absolute;
   font-weight: 300;
-  left: 25px;
-  top: 17px;
+  margin: 17px;
   color: #08a6e4;
 }
 .Header-menu {
@@ -33,19 +30,22 @@ body {
   width: 20px;
   height: 12px;
   left: 325px;
-  top: 29px;
+  margin: 29px 0;
 }
 
 .Home {
-  position: absolute;
+  background-color: brown;
+  display: block;
+  position: relative;
   width: 310px;
   height: 213px;
+  margin-top: 100px;
   left: 33px;
-  top: 170px;
 }
 .Home-title {
-  position: absolute;
+  position: relative;
   width: 162px;
+  height: 57px;
   font-weight: 400;
   font-size: 35px;
   line-height: 41px;
@@ -53,11 +53,10 @@ body {
   left: 73.59px;
 }
 .Home-text {
-  position: absolute;
+  position: relative;
   width: 308px;
   height: 57px;
   left: 1.56px;
-  top: 61px;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -67,8 +66,6 @@ body {
   color: #000000;
 }
 .Home-shop {
-  position: absolute;
-  top: 146px;
   width: 310px;
   height: 67px;
   background: #08a6e4;
@@ -77,19 +74,20 @@ body {
   box-shadow: 5px 10px 14px rgba(7, 172, 230, 0.29);
   border-radius: 40px;
 }
-.Home-background {
-  position: absolute;
+
+.Background {
+  display: block;
+  position: relative;
   width: 779px;
   height: 267px;
   left: -201.5px;
-  top: 223px;
+  margin-top: 51px;
 }
 
 .Results {
   background-color: yellow;
-  position: absolute;
-  width: 303px;
-  left: 36px;
+  display: block;
+  width: 375px;
   top: 714px;
   font-family: "Raleway";
   font-style: normal;
@@ -101,29 +99,33 @@ body {
 }
 .Results-title {
   background-color: green;
+  display: block;
   font-weight: 300;
+  margin-top: 13px;
+}
+.Results-logo {
+  display: block;
 }
 .Results-logo--1 {
   background-color: red;
-  position: absolute;
+  position: relative;
+  width: 117px;
   height: 140px;
-  left: 93px;
   margin-top: 25px;
 }
 .Results-logo--2 {
   background-color: blue;
-  position: absolute;
+  position: relative;
+  width: 176px;
   height: 167px;
-  margin-top: 190px;
-  left: 64px;
+  margin-top: 25px;
 }
 .Results-logo--3 {
   background-color: greenyellow;
-  position: absolute;
+  position: relative;
   width: 163px;
   height: 168px;
-  margin-top: 382px;
-  left: 70px;
+  margin-top: 25px;
 }
 
 .Details {
