--- a/index.scss
+++ b/index.scss
@@ -11,20 +11,17 @@ body {
 }
 
 .Header {
-  position: absolute;
+  display: block;
   text-align: center;
   width: 375px;
   height: 70px;
-  left: 0px;
-  top: 0px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
 
   &-title {
     text-align: center;
     position: absolute;
     font-weight: 300;
-    left: 25px;
-    top: 17px;
+    margin: 17px;
     color: #08a6e4;
   }
 
@@ -34,33 +31,35 @@ body {
     width: 20px;
     height: 12px;
     left: 325px;
-    top: 29px;
+    margin: 29px 0;
   }
 }
 
 .Home {
-  position: absolute;
-
+  background-color: brown;
+  display: block;
+  position: relative;
   width: 310px;
   height: 213px;
+  margin-top: 100px;
   left: 33px;
-  top: 170px;
 
   &-title {
-    position: absolute;
+    position: relative;
     width: 162px;
+    height: 57px;
     font-weight: 400;
     font-size: 35px;
     line-height: 41px;
     text-align: center;
     left: 73.59px;
   }
+
   &-text {
-    position: absolute;
+    position: relative;
     width: 308px;
     height: 57px;
     left: 1.56px;
-    top: 61px;
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
@@ -71,8 +70,6 @@ body {
   }
 
   &-shop {
-    position: absolute;
-    top: 146px;
     width: 310px;
     height: 67px;
     background: #08a6e4;
@@ -81,20 +78,21 @@ body {
     box-shadow: 5px 10px 14px rgba(7, 172, 230, 0.29);
     border-radius: 40px;
   }
-  &-background {
-    position: absolute;
-    width: 779px;
-    height: 267px;
-    left: -201.5px;
-    top: 223px;
-  }
+}
+
+.Background {
+  display: block;
+  position: relative;
+  width: 779px;
+  height: 267px;
+  left: -201.5px;
+  margin-top: 51px;
 }
 
 .Results {
   background-color: yellow;
-  position: absolute;
-  width: 303px;
-  left: 36px;
+  display: block;
+  width: 375px;
   top: 714px;
   font-family: "Raleway";
   font-style: normal;
@@ -106,30 +104,32 @@ body {
 
   &-title {
     background-color: green;
+    display: block;
     font-weight: 300;
+    margin-top: 13px;
   }
   &-logo {
+    display: block;
     &--1 {
       background-color: red;
-      position: absolute;
+      position: relative;
+      width: 117px;
       height: 140px;
-      left: 93px;
       margin-top: 25px;
     }
     &--2 {
       background-color: blue;
-      position: absolute;
+      position: relative;
+      width: 176px;
       height: 167px;
-      margin-top: 190px;
-      left: 64px;
+      margin-top: 25px;
     }
     &--3 {
       background-color: greenyellow;
-      position: absolute;
+      position: relative;
       width: 163px;
       height: 168px;
-      margin-top: 382px;
-      left: 70px;
+      margin-top: 25px;
     }
   }
 }
