--- a/index.scss
+++ b/index.scss
@@ -10,14 +10,14 @@ body {
   font-style: normal;
 }
 
-.Header {
+.header {
   display: block;
   text-align: center;
   width: 375px;
   height: 70px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.29);
 
-  &-title {
+  &__h1 {
     text-align: center;
     position: absolute;
     font-weight: 300;
@@ -25,8 +25,8 @@ body {
     color: #08a6e4;
   }
 
-  &-menu {
-    background-color: blue;
+  &__button {
+    background-color: #08a6e4;
     position: absolute;
     width: 20px;
     height: 12px;
@@ -35,8 +35,7 @@ body {
   }
 }
 
-.Home {
-  background-color: brown;
+.home {
   display: block;
   position: relative;
   width: 310px;
@@ -44,7 +43,7 @@ body {
   margin-top: 100px;
   left: 33px;
 
-  &-title {
+  &__h2 {
     position: relative;
     width: 162px;
     height: 57px;
@@ -55,7 +54,7 @@ body {
     left: 73.59px;
   }
 
-  &-text {
+  &__p {
     position: relative;
     width: 308px;
     height: 57px;
@@ -69,7 +68,7 @@ body {
     color: #000000;
   }
 
-  &-shop {
+  &__button {
     width: 310px;
     height: 67px;
     background: #08a6e4;
@@ -80,16 +79,15 @@ body {
   }
 }
 
-.Background {
+.background {
   display: block;
   position: relative;
-  width: 779px;
+  width: 375px;
   height: 267px;
-  left: -201.5px;
   margin-top: 51px;
 }
 
-.Results {
+.results {
   background-color: yellow;
   display: block;
   width: 375px;
@@ -270,7 +268,6 @@ body {
 }
 
 .Princing {
-  background-color: burlywood;
   display: block;
   &-title {
     width: 114px;
@@ -282,51 +279,278 @@ body {
   }
 }
 
-.Suscription {
-  background-color: white;
-  position: relative;
-  width: 293px;
-  height: 251px;
-  left: 41px;
-
-  &-general {
-    background-color: red;
-    display: inline-block;
-    width: 70px;
-    height: 70px;
-    &--type {
-      width: 52px;
-      height: 24px;
-    }
-    &--price {
-      width: 59px;
-      height: 64px;
-    }
+.suscription {
+  margin-bottom: 30px;
+  &__general {
+    background-color: white;
+    position: relative;
+    width: 293px;
+    height: 251px;
+    border: 1px solid red;
+    border-radius: 18px;
   }
-  &-details {
+  &__price {
     display: inline-block;
     position: relative;
-    background-color: brown;
+    display: inline-block;
+    &--h4 {
+      font-size: 20px;
+      line-height: 24px;
+    }
+    &--p {
+      font-weight: 300;
+      font-size: 46px;
+    }
   }
-  &-begin {
-    display: block;
-    position: absolute;
-    bottom: 0;
+  &__ul {
+    position: relative;
+    display: inline-block;
+    list-style: none;
+    left: 70px;
+    top: 20px;
+    &--li {
+      position: relative;
+      margin-bottom: 15px;
+      &:before {
+        content: "";
+        height: 15px;
+        width: 15px;
+        background-image: url("./assets/checbox-success.png");
+        background-position: center center;
+        background-size: cover;
+        position: absolute;
+        top: 6px;
+        left: -15px;
+      }
+    }
+  }
+  &__button {
+    background-color: #eb476e;
+    position: relative;
     width: 150px;
     height: 50px;
-    box-shadow: 5px 10px 14px rgba(7, 172, 230, 0.29);
-    border-radius: 23px;
+    border-radius: 18px;
+    bottom: -40px;
+    left: 60px;
+    border: none;
+    color: white;
   }
 }
 
-.basic {
-  border: red 2px solid;
+.suscription1 {
+  margin-bottom: 30px;
+  &__general {
+    background-color: white;
+    position: relative;
+    width: 293px;
+    height: 251px;
+    border: 1px solid #07ace6;
+    border-radius: 18px;
+  }
+  &__price {
+    display: inline-block;
+    position: relative;
+    display: inline-block;
+    &--h4 {
+      font-size: 20px;
+      line-height: 24px;
+    }
+    &--p {
+      font-weight: 300;
+      font-size: 46px;
+    }
+    &--offer {
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 14px;
+    }
+  }
+  &__ul {
+    position: relative;
+    display: inline-block;
+    list-style: none;
+    left: 70px;
+    top: 20px;
+    &--li {
+      position: relative;
+      margin-bottom: 15px;
+      &:before {
+        content: "";
+        height: 15px;
+        width: 15px;
+        background-image: url("./assets/checbox-success.png");
+        background-position: center center;
+        background-size: cover;
+        position: absolute;
+        top: 6px;
+        left: -15px;
+      }
+    }
+  }
+  &__button {
+    background-color: #07ace6;
+    position: relative;
+    width: 150px;
+    height: 50px;
+    border-radius: 18px;
+    bottom: -40px;
+    left: 60px;
+    border: none;
+    color: white;
+  }
 }
-.professional {
-  border: #07ace6 2px solid;
+
+.suscription2 {
+  margin-bottom: 30px;
+  &__general {
+    background-color: white;
+    position: relative;
+    width: 293px;
+    height: 251px;
+    border: 1px solid #55dfb4;
+    border-radius: 18px;
+  }
+  &__price {
+    display: inline-block;
+    position: relative;
+    display: inline-block;
+    &--h4 {
+      font-size: 20px;
+      line-height: 24px;
+    }
+    &--p {
+      font-weight: 300;
+      font-size: 46px;
+    }
+    &--offer {
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 14px;
+    }
+  }
+  &__ul {
+    position: relative;
+    display: inline-block;
+    list-style: none;
+    left: 70px;
+    top: 20px;
+    &--li {
+      position: relative;
+      margin-bottom: 15px;
+      &:before {
+        content: "";
+        height: 15px;
+        width: 15px;
+        background-image: url("./assets/checbox-success.png");
+        background-position: center center;
+        background-size: cover;
+        position: absolute;
+        top: 6px;
+        left: -15px;
+      }
+    }
+  }
+  &__button {
+    background-color: #55dfb4;
+    position: relative;
+    width: 150px;
+    height: 50px;
+    border-radius: 18px;
+    bottom: -40px;
+    left: 60px;
+    border: none;
+    color: white;
+  }
 }
-.premium {
-  border: green 2px solid;
+
+.questions {
+  &__h3 {
+    position: relative;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 47px;
+    left: 30px;
+  }
+  &__p {
+    position: relative;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    left: 30px;
+    margin-bottom: 38px;
+  }
+  &__ul {
+    position: relative;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    left: 30px;
+    list-style: none;
+
+    &--mail {
+    }
+
+    &--phone {
+    }
+  }
+
+  &__form {
+    background-color: red;
+  }
+  &__name {
+    position: relative;
+    margin-top: 57px;
+    display: block;
+    left: 30px;
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: 3.28px;
+    color: #08a6e4;
+    &--span {
+      display: block;
+      margin-bottom: 42px;
+    }
+    &--input {
+      display: block;
+      border: none;
+      background-color: transparent;
+      border-bottom: 0.1px solid #95989a;
+      width: 312px;
+    }
+  }
+
+  &__email {
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: 3.28px;
+    position: relative;
+    margin-top: 42px;
+    left: 30px;
+    color: #08a6e4;
+    &--span {
+      display: block;
+      margin-bottom: 42px;
+    }
+    &--input {
+      display: block;
+      border: none;
+      width: 312px;
+      background-color: transparent;
+      border-bottom: 0.1px solid #95989a;
+    }
+  }
+
+  &__button {
+    width: 226px;
+    height: 57px;
+    background: #08a6e4;
+    color: white;
+    box-shadow: 5px 10px 14px rgba(7, 172, 230, 0.29);
+    border-radius: 35px;
+    border: none;
+  }
 }
 
 .Footer {
