--- a/index.scss
+++ b/index.scss
@@ -26,12 +26,12 @@ body {
   }
 
   &__button {
-    background-color: #08a6e4;
     position: absolute;
     width: 20px;
     height: 12px;
     left: 325px;
     margin: 29px 0;
+    border: none;
   }
 }
 
@@ -88,7 +88,6 @@ body {
 }
 
 .results {
-  background-color: yellow;
   display: block;
   width: 375px;
   top: 714px;
@@ -100,55 +99,151 @@ body {
   text-align: center;
   color: #000000;
 
-  &-title {
-    background-color: green;
+  &__h3 {
     display: block;
     font-weight: 300;
     margin-top: 13px;
   }
-  &-logo {
-    display: block;
-    &--1 {
-      background-color: red;
+
+  .person {
+    position: relative;
+    width: 117px;
+    height: 140px;
+    margin-top: 25px;
+    left: 129px;
+
+    &__background {
       position: relative;
-      width: 117px;
-      height: 140px;
-      margin-top: 25px;
+      background-color: #fb3b64;
+      width: 62.71px;
+      height: 62.71px;
+      border-radius: 50%;
     }
-    &--2 {
-      background-color: blue;
+    &__img {
       position: relative;
-      width: 176px;
-      height: 167px;
-      margin-top: 25px;
+      z-index: 2;
+      top: -58px;
+      left: -5px;
     }
-    &--3 {
-      background-color: greenyellow;
+    &__number {
       position: relative;
-      width: 163px;
-      height: 168px;
-      margin-top: 25px;
+      font-weight: 800;
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 5.96px;
+      color: #000000;
+      top: -58px;
+    }
+
+    &__details {
+      position: relative;
+      font-weight: 400;
+      font-size: 17px;
+      line-height: 20px;
+      text-align: center;
+      top: -58px;
+      color: #a5a5a5;
+    }
+  }
+  .eye {
+    position: relative;
+    width: 117px;
+    height: 140px;
+    margin-top: 25px;
+    left: 129px;
+
+    &__background {
+      position: relative;
+      background-color: #08a6e4;
+      width: 62.71px;
+      height: 62.71px;
+      border-radius: 50%;
+    }
+    &__img {
+      position: relative;
+      z-index: 2;
+      top: -58px;
+      left: -5px;
+    }
+    &__number {
+      position: relative;
+      font-weight: 800;
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 5.96px;
+      color: #000000;
+      top: -58px;
+    }
+
+    &__details {
+      position: relative;
+      font-weight: 400;
+      font-size: 17px;
+      line-height: 20px;
+      text-align: center;
+      top: -58px;
+      color: #a5a5a5;
+    }
+  }
+  .group {
+    position: relative;
+    width: 117px;
+    height: 140px;
+    margin-top: 25px;
+    left: 129px;
+
+    &__background {
+      position: relative;
+      background-color: #55dfb4;
+      width: 62.71px;
+      height: 62.71px;
+      border-radius: 50%;
+    }
+    &__img {
+      position: relative;
+      z-index: 2;
+      top: -58px;
+      left: -5px;
+    }
+    &__number {
+      position: relative;
+      font-weight: 800;
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 5.96px;
+      color: #000000;
+      top: -58px;
+    }
+
+    &__details {
+      position: relative;
+      font-weight: 400;
+      font-size: 17px;
+      line-height: 20px;
+      text-align: center;
+      top: -58px;
+      color: #a5a5a5;
     }
   }
 }
 
 .Details {
   display: block;
-  background: red;
+  background: #f7f7f7;
   width: 375px;
   height: 1395.66px;
 
-  .First {
-    background-color: cornflowerblue;
+  .first {
+    background-color: white;
     position: relative;
     top: 42px;
     left: 30px;
     width: 314px;
     height: 370px;
-    &-description {
-      margin-top: 26px;
 
-      &--title {
+    &__description {
+      &--h3 {
+        position: relative;
         width: 198px;
         height: 72px;
         font-family: "Raleway";
@@ -156,11 +251,14 @@ body {
         font-weight: 400;
         font-size: 30px;
         line-height: 35px;
+        margin-left: 21px;
+        top: -80px;
       }
 
-      &--paragraph {
+      &--p {
+        position: relative;
         margin-top: 10px;
-        position: absolute;
+        margin-left: 21px;
         width: 272px;
         height: 84px;
         font-family: "Open Sans";
@@ -168,42 +266,57 @@ body {
         font-weight: 400;
         font-size: 14px;
         line-height: 21px;
+        top: -80px;
       }
     }
-    &-image {
-      background-color: blueviolet;
-      margin-top: 37px;
+    &__image {
       &--photo {
+        position: relative;
+        margin-top: 37px;
+        margin-left: 37px;
         width: 192.76px;
         height: 109.93px;
+        z-index: 2;
+      }
+      &--circle {
+        position: relative;
+        width: 90.12px;
+        height: 90.12px;
+        background-color: #fb3b64;
+        border-radius: 50%;
+        z-index: 1;
+        top: -132px;
+        left: 144px;
       }
     }
   }
 
-  .Shop {
-    background-color: cornflowerblue;
+  .shop {
+    background-color: white;
     position: relative;
     top: 42px;
     left: 30px;
     width: 314px;
     height: 370px;
 
-    &-description {
-      margin-top: 26px;
-
-      &--title {
-        width: 218px;
-        height: 70px;
+    &__description {
+      &--h3 {
+        position: relative;
+        width: 198px;
+        height: 72px;
         font-family: "Raleway";
         font-style: normal;
         font-weight: 400;
         font-size: 30px;
         line-height: 35px;
+        margin-left: 21px;
+        top: -80px;
       }
 
-      &--paragraph {
+      &--p {
+        position: relative;
         margin-top: 10px;
-        position: absolute;
+        margin-left: 21px;
         width: 272px;
         height: 84px;
         font-family: "Open Sans";
@@ -211,57 +324,83 @@ body {
         font-weight: 400;
         font-size: 14px;
         line-height: 21px;
+        top: -80px;
       }
     }
-    &-image {
-      background-color: blueviolet;
-      margin-top: 37px;
+    &__image {
       &--photo {
+        position: relative;
+        margin-top: 37px;
+        margin-left: 37px;
         width: 192.76px;
         height: 109.93px;
+        z-index: 2;
+      }
+      &--circle {
+        position: relative;
+        width: 131.88px;
+        height: 131.7px;
+        background-color: #08a6e4;
+        border-radius: 50%;
+        z-index: 1;
+        top: -144px;
+        left: 47px;
       }
     }
   }
 
-  .Brand {
-    background-color: cornflowerblue;
+  .brand {
+    background-color: white;
+    margin: 42px 0;
     position: relative;
     top: 42px;
     left: 30px;
     width: 314px;
     height: 370px;
 
-    &-description {
-      margin-top: 26px;
+    &__description {
+      &--h3 {
+        position: relative;
+        width: 198px;
+        height: 72px;
+        font-family: "Raleway";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 30px;
+        line-height: 35px;
+        margin-left: 21px;
+        top: 31px;
+      }
 
-      &--title {
+      &--p {
+        position: relative;
+        margin-left: 21px;
         width: 274px;
-        height: 109px;
-        font-family: "Raleway";
-        font-style: normal;
-        font-weight: 400;
-        font-size: 30px;
-        line-height: 35px;
-      }
-
-      &--paragraph {
-        margin-top: 10px;
-        position: absolute;
-        width: 272px;
-        height: 84px;
+        height: 114px;
         font-family: "Open Sans";
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
         line-height: 21px;
+        top: 90px;
       }
     }
-    &-image {
-      background-color: blueviolet;
-      margin-top: 37px;
+    &__image {
       &--photo {
+        position: relative;
+        margin-top: 100px;
+        margin-left: 37px;
         width: 192.76px;
         height: 109.93px;
+        z-index: 2;
+      }
+      &--circle {
+        position: relative;
+        width: 314px;
+        height: 195px;
+        background-color: #55dfb4;
+        z-index: 1;
+        top: -144px;
       }
     }
   }
